--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,7 @@ h1,h2,h3,h4,h5,h6{
   margin: 20px 20px 50px;
 }
 
-.suvana-img{
+.press-logo.suvana-img{
   width: 10%;
   margin: 20px 20px 50px;
 }
